2008-08-27  Sebastien Pouliot  <sebastien@ximian.com>

	* Page.cs: Add a new Options step to the enum.
	* Wizard.Designer.cs: Update (vs generated)
	* Wizard.cs: Add the new Options step to allow users to set
	a limit to the number of defects reported, to filter based on
	the severity or the confidence level of the defects and finally
	on the visibility of the code being analyzed.
	* Properties/Settings.settings: Update (vs generated)
	* Properties/Settings.Designer.cs: Update (vs generated)

2008-08-06  Sebastien Pouliot  <sebastien@ximian.com>

	* Wizard.cs: (GetSelectedWriter) Use the index parameter.

2008-08-02  Sebastien Pouliot  <sebastien@ximian.com>

	* Wizard.cs: Remove unneeded call to String.Format [self-test]

2008-07-27  Sebastien Pouliot  <sebastien@ximian.com>

	* Wizard.Designer.cs: Make it look better for high-DPI displays.
	* Wizard.cs: Display a single version number based on the 
	Gendarme framework.

2008-07-26  Sebastien Pouliot  <sebastien@ximian.com>

	* Wizard.cs: Add an extra [End|Begin]Update on the TreeView before
	calling Sort. Fix a bug (infinite recursion) under Vista (and Windows
	2008 server) operating systems.

2008-07-15  Sebastien Pouliot  <sebastien@ximian.com>

	* gendarme.ico: Add Gendarme icon
	* Makefile.am: Add icon to dist

2008-07-14  Sebastien Pouliot  <sebastien@ximian.com>

	* GuiRunner.cs: Prefer Assembly.Load to LoadFile (AvoidCalling
	ProblematicMethodsRule). Also correct the "skip well known" 
	assemblies hack.

2008-06-16  Sebastien Pouliot  <sebastien@ximian.com>

	* Wizard.Designer.cs: Disable auto-scaling since it resize the form
	based on the font (and look bad on some Linux desktop).

2008-06-08  Sebastien Pouliot  <sebastien@ximian.com>

	* Page.cs: New. Moved un-nested enum from Wizard.cs [self-test]
	* Wizard.cs: Remove Page nested enum.
	* Makefile.am: Add Page.cs to the build
	* swf-wizard-runner.mdp: Update MD project file.

2008-06-01  Sebastien Pouliot  <sebastien@ximian.com>
